--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
 	"extends": "@tsconfig/node18-strictest-esm/tsconfig.json",
+	"exclude": ["com.joshuatz.time-trackers.sdPlugin", "dist", "node_modules"],
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
 		"resolveJsonModule": true,
 		"importsNotUsedAsValues": "preserve",
+		"noUnusedLocals": false,
 		"outDir": "dist"
 	}
 }
