Improve: Docs, release orchestration, etc.
- Fill out docs more
- Add some release orchestration / Taskfile automation
- Bump versions, fix up release artifacts
- Add LICENSE file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
 	"prettier.enable": true,
 	"editor.formatOnSave": true,
-	"editor.insertSpaces": false
+	"editor.insertSpaces": false,
+	"cSpell.words": ["toggl"]
 }
