--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
+# Build tools
+.task
+dist
+
+# Deps
 node_modules
+
+# Secrets, etc.
 .env
 scratch.*
-node_modules
-dist
+
 # For now
 com.joshuatz.time-trackers.sdPlugin
