--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
 	"prettier.enable": true,
 	"editor.formatOnSave": true,
 	"editor.insertSpaces": false,
-	"cSpell.words": ["toggl"]
+	"cSpell.words": ["toggl"],
+	"[typescript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	}
 }
