--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "jtz-time-tracker-utils",
-	"version": "1.0.1",
+	"version": "1.1.0",
 	"description": "Various time tracker utilities, WIP",
 	"main": "cli.js",
 	"bin": {
@@ -27,6 +27,7 @@
 	"devDependencies": {
 		"@tsconfig/node18-strictest-esm": "^1.0.1",
 		"@types/node": "^18.14.0",
+		"prettier": "^3.0.3",
 		"tsx": "^3.12.7",
 		"typescript": "^4.9.5"
 	},
