--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		"resolveJsonModule": true,
 		"importsNotUsedAsValues": "preserve",
 		"noUnusedLocals": false,
-		"outDir": "dist"
+		"outDir": "dist",
+		"declaration": true
 	}
 }
