--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "jtz-time-tracker-utils",
-	"version": "1.2.0",
+	"version": "1.2.1",
 	"description": "Various time tracker utilities, WIP",
 	"main": "cli.js",
 	"bin": {
@@ -34,6 +34,7 @@
 	"dependencies": {
 		"cmd-ts": "^0.12.1",
 		"date-fns": "^2.29.3",
+		"es-main": "^1.3.0",
 		"node-fetch": "^3.3.0"
 	}
 }
