--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@types/node": "^18.14.0",
 		"prettier": "^3.0.3",
 		"tsx": "^3.12.7",
+		"type-fest": "^4.11.1",
 		"typescript": "^4.9.5"
 	},
 	"dependencies": {
